Moved vercel.json to root directory

--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,9 @@
     },
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist",
-        "buildCommand": "cd frontend && npm install && npm run build"
+      "use": "@vercel/next",
+      "config": { "distDir": "dist" }
       }
-    }
   ],
   "routes": [
     {
@@ -28,7 +25,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/dist/$1"
+      "dest": "/frontend/$1"
     }
   ]
 }
