--- a/vercel.json
+++ b/vercel.json
@@ -2,31 +2,29 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "backend/app.py",
       "use": "@vercel/python"
     },
     {
       "src": "frontend/package.json",
-      "use": "@vercel/next",
-      "config": { "distDir": "dist" }
+      "use": "@vercel/static-build",
+      "config": {
+        "buildCommand": "npm install && npm run build"
       }
+    }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server.js"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "backend/app.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "dest": "frontend/dist/$1"
+    },
+    {
+      "src": "/.*",
+      "dest": "frontend/dist/index.html"
     }
   ]
 }
-
