--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/app.py",
-      "use": "@vercel/python"
+      "src": "backend/server.js",
+      "use": "@vercel/node"
     },
     {
       "src": "frontend/package.json",
@@ -16,7 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/app.py"
+      "dest": "/backend/server.js"
     },
     {
       "src": "/(.*)",
@@ -24,4 +24,5 @@
     }
   ]
 }
+
 
