--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "node-fetch": "^2.6.9",
-        "rimraf": "^6.0.1"
+        "rimraf": "^6.0.1",
+        "serialize-javascript": "^6.0.2"
     },
     "devDependencies": {
         "@rollup/plugin-terser": "^0.4.4",
